# labassist

./: .gitignore  ReadME.md
hpc_scripts/MS-TCN/: batch_gen.py  causal_model.py  model.py  train.py
hpc_scripts/bashscripts/: precompute_i3d_features.sh  precompute_imfe_features.sh
hpc_scripts/bashscripts/MS-TCN/: ms_tcnn_causal_i3d_steps.sh  ms_tcnn_causal_imfe_steps.sh  ms_tcnn_noncausal_i3d_steps.sh  ms_tcnn_noncausal_imfe_steps.sh
hpc_scripts/scripts/: eval_val_timelines_plus.py  extract_frames_for_imfe.py
hpc_scripts/scripts/eval/: eval_val_timelines_plus.py
hpc_scripts/scripts/feature_computations/: convert_imfe_to_cache.py  precompute_features_i3d.py
labassist_bringup/: package.xml  setup.cfg  setup.py
labassist_bringup/labassist_bringup/launch/: demo_pipeline.launch.py  sim_from_video.launch.py
labassist_interfaces/: CMakeLists.txt  package.xml
labassist_interfaces/msg/: ActionEvent.msg  Alert.msg  FrameMetrics.msg  MixParams.msg
labassist_nodes/: package.xml  setup.cfg  setup.py
labassist_nodes/labassist_nodes/: camera_player.py  feature_resnet18.py  fsm_validator.py  metrics_collector.py  mstcn_infer.py  notifier_console.py  sim_actions.py
